# hs-tokstyle

./: .cirrus.yml  .gitignore  .leaf.yml  .travis.yml  BUILD.bazel  Makefile  README.md  appveyor.yml  expand_yacc.pl  stack.yaml  tokstyle.cabal
.circleci/: config.yml
.github/: check_release  settings.yml
.github/docker/: Dockerfile
.github/workflows/: checks.yml  ci.yml  publish.yml
doc/: BUILD.bazel  cimple.md  generate  points-to-optimization.md  points-to.md
include/: assert.h  errno.h  fcntl.h  inttypes.h  limits.h  msgpack  msgpack.h  netdb.h  opus  pthread.h  sodium  sodium.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  time.h  types.h  unistd.h  vpx
include/arpa/: inet.h
include/linux/: if.h
include/netinet/: in.h
include/sys/: ioctl.h  select.h  socket.h  time.h
src/: Main.hs  Result.hs
src/Checks/: Naming.hs
src/Tokstyle/: C.hs  Cimple.hs  Common.hs  Linter.hs  Result.hs  Sources.hs  Worklist.hs
src/Tokstyle/Analysis/: CFG.hs  CallGraph.hs  Context.hs  DataFlow.hs  PointsTo.hs  Scope.hs  SecurityRank.hs  Types.hs  VTable.hs
src/Tokstyle/Analysis/PointsTo/: ExternalSummaries.hs  Fixpoint.hs  Types.hs
src/Tokstyle/Analysis/SecurityRank/: Annotations.hs  Lattice.hs  Types.hs
src/Tokstyle/C/: Env.hs  Linter.hs  Naming.hs  Patterns.hs  TravUtils.hs  TraverseAst.hs
src/Tokstyle/C/Linter/: BoolConversion.hs  CallbackParams.hs  Cast.hs  Conversion.hs  Memcpy.hs  Memset.hs  SizeArg.hs  Sizeof.hs  VoidCall.hs
src/Tokstyle/Cimple/: AST.hs  Analysis.hs  Diagnostics.hs  IO.hs  Lexer.x  Parser.y  Tokens.hs  TraverseAst.hs
src/Tokstyle/Cimple/Analysis/: DeclaredOnce.hs  DeclsHaveDefns.hs  DocComments.hs  ForLoops.hs  FuncPrototypes.hs  FuncScopes.hs  GlobalFuncs.hs  LoggerCalls.hs  LoggerNoEscapes.hs  NameSpelling.hs  VarUnusedInScope.hs
src/Tokstyle/Common/: EnumLinter.hs  Patterns.hs  StructLinter.hs  TypeSystem.hs
src/Tokstyle/Linter/: Assert.hs  BoolReturn.hs  BooleanReturn.hs  Booleans.hs  CallbackNames.hs  Callgraph.hs  CallocArgs.hs  CallocType.hs  Comments.hs  CompoundInit.hs  Constness.hs  DeclaredOnce.hs  DeclsHaveDefns.hs  DocComments.hs  EnumDefines.hs  EnumNames.hs  ForLoops.hs  FuncPrototypes.hs  FuncScopes.hs  GlobalFuncs.hs  LargeStructParams.hs  LoggerCalls.hs  LoggerConst.hs  LoggerNoEscapes.hs  MallocCall.hs  MallocType.hs  MemcpyStructs.hs  MissingNonNull.hs  Nesting.hs  NonNull.hs  Nullability.hs  OwnershipDecls.hs  Parens.hs  PointsTo.hs  PointsToAsserts.hs  SecurityRank.hs  SwitchIf.hs  TaggedUnion.hs  TypeCheck.hs  TypedefName.hs  (+2 more)
src/Tokstyle/SemFmt/: EnumFromInt.hs  EnumToString.hs  EnumUnpack.hs  StructPack.hs
test/Tokstyle/: CimpleSpec.hs  LinterSpec.hs
test/Tokstyle/Analysis/: AnnotationsSpec.hs  CallGraphSpec.hs  ContextSpec.hs  DataFlowSpec.hs  LatticeSpec.hs  PointsToSpec.hs  ScopeSpec.hs  SecurityRankSpec.hs  VTableSpec.hs
test/Tokstyle/C/: LinterSpec.hs
test/Tokstyle/C/Linter/: BoolConversionSpec.hs  CallbackParamsSpec.hs  CastSpec.hs  ConversionSpec.hs  MemsetSpec.hs  SizeArgSpec.hs  SizeofSpec.hs  VoidCallSpec.hs
test/Tokstyle/Cimple/: AnalysisSpec.hs
test/Tokstyle/Linter/: AssertSpec.hs  BoolReturnSpec.hs  BooleanReturnSpec.hs  BooleansSpec.hs  CallbackNamesSpec.hs  CallgraphSpec.hs  CallocArgsSpec.hs  CallocTypeSpec.hs  CommentsSpec.hs  CompoundInitSpec.hs  ConstnessSpec.hs  DeclaredOnceSpec.hs  DeclsHaveDefnsSpec.hs  DocCommentsSpec.hs  EnumDefinesSpec.hs  EnumNamesSpec.hs  FuncPrototypesSpec.hs  FuncScopesSpec.hs  GlobalFuncsSpec.hs  LoggerCallsSpec.hs  LoggerConstSpec.hs  LoggerNoEscapesSpec.hs  MallocCallSpec.hs  MallocTypeSpec.hs  MemcpyStructsSpec.hs  MissingNonNullSpec.hs  NestingSpec.hs  NonNullSpec.hs  NullabilitySpec.hs  OwnershipDeclsSpec.hs  ParensSpec.hs  PointsToAssertsSpec.hs  PointsToSpec.hs  SecurityRankSpec.hs  SwitchIfSpec.hs  TaggedUnionSpec.hs  TypeCheckSpec.hs  TypedefNameSpec.hs  UnsafeFuncSpec.hs  VarUnusedInScopeSpec.hs
test/Tokstyle/SemFmt/: EnumFromIntSpec.hs  EnumToStringSpec.hs  EnumUnpackSpec.hs  StructPackSpec.hs
tools/: BUILD.bazel  check-c.hs  check-cimple.hs  dump-tokens.hs  tokstyle
web/: BUILD.bazel  webservice.hs
web/Tokstyle/: App.hs
