load("@ai_formation_hazel//tools:mangling.bzl", "hazel_library")
load("@rules_haskell//haskell:defs.bzl", "haskell_library")
load("//third_party/haskell/hspec-discover:build_defs.bzl", "hspec_test")
load("//tools/project:build_defs.bzl", "project")

project(custom_github = True)

haskell_library(
    name = "hs-tokstyle",
    srcs = glob(["src/**/*.*hs"]),
    src_strip_prefix = "src",
    version = "0.0.9",
    visibility = ["//visibility:public"],
    deps = [
        "//hs-cimple",
        hazel_library("aeson"),
        hazel_library("base"),
        hazel_library("bytestring"),
        hazel_library("containers"),
        hazel_library("deepseq"),
        hazel_library("filepath"),
        hazel_library("groom"),
        hazel_library("mtl"),
        hazel_library("text"),
    ],
)

hspec_test(
    name = "testsuite",
    size = "small",
    deps = [
        ":hs-tokstyle",
        "//hs-cimple",
        hazel_library("base"),
        hazel_library("hspec"),
        hazel_library("text"),
    ],
)
