load("@rules_haskell//haskell:defs.bzl", "haskell_library")
load("//third_party/haskell/hspec-discover:build_defs.bzl", "hspec_test")
load("//tools/project:build_defs.bzl", "project")

project()

haskell_library(
    name = "c-linters",
    srcs = glob(["src/Tokstyle/C/**/*.*hs"]),
    compiler_flags = ["-j4"],
    src_strip_prefix = "src",
    version = "0.0.9",
    visibility = ["//visibility:public"],
    deps = [
        "//third_party/haskell:base",
        "//third_party/haskell:containers",
        "//third_party/haskell:language-c",
        "//third_party/haskell:mtl",
        "//third_party/haskell:parallel",
        "//third_party/haskell:text",
    ],
)

haskell_library(
    name = "hs-tokstyle",
    srcs = glob(
        ["src/**/*.*hs"],
        exclude = ["src/Tokstyle/C/**"],
    ),
    compiler_flags = ["-j4"],
    src_strip_prefix = "src",
    version = "0.0.9",
    visibility = ["//visibility:public"],
    deps = [
        "//hs-cimple",
        "//third_party/haskell:aeson",
        "//third_party/haskell:ansi-wl-pprint",
        "//third_party/haskell:array",
        "//third_party/haskell:base",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:containers",
        "//third_party/haskell:data-fix",
        "//third_party/haskell:deepseq",
        "//third_party/haskell:edit-distance",
        "//third_party/haskell:extra",
        "//third_party/haskell:filepath",
        "//third_party/haskell:groom",
        "//third_party/haskell:language-c",
        "//third_party/haskell:microlens",
        "//third_party/haskell:microlens-th",
        "//third_party/haskell:mtl",
        "//third_party/haskell:parallel",
        "//third_party/haskell:text",
    ],
)

hspec_test(
    name = "testsuite",
    size = "small",
    deps = [
        ":hs-tokstyle",
        "//hs-cimple",
        "//third_party/haskell:base",
        "//third_party/haskell:hspec",
        "//third_party/haskell:text",
    ],
)

filegroup(
    name = "headers",
    srcs = glob(["include/**/*.h"]),
    visibility = ["//visibility:public"],
)
