load("@rules_haskell//haskell:defs.bzl", "haskell_library")
load("//third_party/haskell/hspec-discover:build_defs.bzl", "hspec_test")
load("//tools/project:build_defs.bzl", "project")

project(
    custom_cirrus = True,
    license = "gpl3-https",
)

haskell_library(
    name = "c-linters",
    srcs = glob(["src/Tokstyle/C/**/*.*hs"]),
    ghcopts = ["-j4"],
    src_strip_prefix = "src",
    tags = [
        "haskell",
        "no-cross",
    ],
    version = "0.0.9",
    visibility = ["//visibility:public"],
    deps = [
        "//third_party/haskell:base",
        "//third_party/haskell:containers",
        "//third_party/haskell:language-c",
        "//third_party/haskell:mtl",
        "//third_party/haskell:parallel",
        "//third_party/haskell:text",
    ],
)

haskell_library(
    name = "hs-tokstyle",
    srcs = glob(
        ["src/**/*.hs"],
        exclude = ["src/Tokstyle/C/**"],
    ),
    ghcopts = [
        "-j4",
        "-Wno-incomplete-uni-patterns",
        "-Wno-unused-matches",
    ],
    src_strip_prefix = "src",
    tags = [
        "haskell",
        "no-cross",
    ],
    version = "0.0.9",
    visibility = ["//visibility:public"],
    deps = [
        "//hs-cimple",
        "//third_party/haskell:aeson",
        "//third_party/haskell:array",
        "//third_party/haskell:base",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:casing",
        "//third_party/haskell:containers",
        "//third_party/haskell:data-fix",
        "//third_party/haskell:deepseq",
        "//third_party/haskell:edit-distance",
        "//third_party/haskell:extra",
        "//third_party/haskell:filepath",
        "//third_party/haskell:groom",
        "//third_party/haskell:hashable",
        "//third_party/haskell:language-c",
        "//third_party/haskell:microlens",
        "//third_party/haskell:microlens-th",
        "//third_party/haskell:mtl",
        "//third_party/haskell:parallel",
        "//third_party/haskell:prettyprinter",
        "//third_party/haskell:text",
    ],
)

hspec_test(
    name = "testsuite",
    size = "small",
    ghcopts = [
        "-j4",
        "-Wno-unused-matches",
    ],
    deps = [
        ":c-linters",
        ":hs-tokstyle",
        "//hs-cimple",
        "//third_party/haskell:base",
        "//third_party/haskell:containers",
        "//third_party/haskell:data-fix",
        "//third_party/haskell:groom",
        "//third_party/haskell:hashable",
        "//third_party/haskell:hspec",
        "//third_party/haskell:language-c",
        "//third_party/haskell:mtl",
        "//third_party/haskell:text",
    ],
)

filegroup(
    name = "headers",
    srcs = glob(["include/**/*.h"]),
    visibility = ["//visibility:public"],
)
