name:                tokstyle
version:             0.0.9
synopsis:            TokTok C code style checker
description:         TokTok C code style checker
homepage:            https://toktok.github.io/tokstyle
license:             GPL-3
license-file:        LICENSE
author:              iphydf
maintainer:          iphydf@users.noreply.github.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/TokTok/tokstyle

library
  default-language:    Haskell2010
  exposed-modules:
      Tokstyle.Linter
  other-modules:
      Tokstyle.Linter.DeclaredOnce
    , Tokstyle.Linter.DeclsHaveDefns
    , Tokstyle.Linter.DocComments
    , Tokstyle.Linter.ForLoops
    , Tokstyle.Linter.FuncPrototypes
    , Tokstyle.Linter.FuncScopes
    , Tokstyle.Linter.GlobalFuncs
    , Tokstyle.Linter.LoggerCalls
    , Tokstyle.Linter.LoggerNoEscapes
    , Tokstyle.Linter.VarUnusedInScope
    , Tokstyle.Result
  ghc-options:
      -Wall
  hs-source-dirs:      src
  build-depends:
      base              >= 4 && < 5
    , aeson             >= 0.8.1.0
    , bytestring
    , cimple            >= 0.0.5
    , containers
    , deepseq
    , filepath
    , groom
    , mtl
    , text

executable check-cimple
  default-language: Haskell2010
  hs-source-dirs:
      tools
  ghc-options:
      -Wall
  main-is: check-cimple.hs
  build-depends:
      base < 5
    , cimple
    , text
    , tokstyle

executable webservice
  main-is:             webservice.hs
  ghc-options:
      -Wall
  hs-source-dirs:      web
  default-language:    Haskell2010
  other-modules:
      Tokstyle.App
  build-depends:
      base >= 4 && < 5
    , bytestring
    , cimple
    , servant           >= 0.5
    , servant-server    >= 0.5
    , text
    , tokstyle
    , wai
    , wai-cors
    , wai-extra
    , warp

test-suite testsuite
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: testsuite.hs
  other-modules:
      Tokstyle.LinterSpec
  ghc-options:
      -Wall
      -fno-warn-unused-imports
  build-tool-depends:
      hspec-discover:hspec-discover
  build-depends:
      base < 5
    , cimple
    , hspec
    , text
    , tokstyle
