name:                tokstyle
version:             0.0.9
synopsis:            TokTok C code style checker
description:         TokTok C code style checker
homepage:            https://toktok.github.io/tokstyle
license:             GPL-3
license-file:        LICENSE
author:              iphydf
maintainer:          iphydf@users.noreply.github.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/TokTok/tokstyle

library
  default-language:    Haskell2010
  exposed-modules:
      Tokstyle.Linter
  other-modules:
      Tokstyle.Common
    , Tokstyle.Linter.Booleans
    , Tokstyle.Linter.BooleanReturn
    , Tokstyle.Linter.CallbackNames
    , Tokstyle.Linter.Callgraph
    , Tokstyle.Linter.CallocArgs
    , Tokstyle.Linter.CallocType
    , Tokstyle.Linter.CompoundInit
    , Tokstyle.Linter.Constness
    , Tokstyle.Linter.DeclaredOnce
    , Tokstyle.Linter.DeclsHaveDefns
    , Tokstyle.Linter.DocComments
    , Tokstyle.Linter.EnumNames
    , Tokstyle.Linter.FuncPrototypes
    , Tokstyle.Linter.FuncScopes
    , Tokstyle.Linter.GlobalFuncs
    , Tokstyle.Linter.LargeStructParams
    , Tokstyle.Linter.LoggerCalls
    , Tokstyle.Linter.LoggerConst
    , Tokstyle.Linter.LoggerNoEscapes
    , Tokstyle.Linter.MallocType
    , Tokstyle.Linter.MemcpyStructs
    , Tokstyle.Linter.MissingNonNull
    , Tokstyle.Linter.NonNull
    , Tokstyle.Linter.Parens
    , Tokstyle.Linter.TypeCheck
    , Tokstyle.Linter.TypedefName
    , Tokstyle.Linter.UnsafeFunc
    , Tokstyle.Linter.VarUnusedInScope
  ghc-options:
      -Wall
  hs-source-dirs:      src
  build-depends:
      base              >= 4 && < 5
    , aeson             >= 0.8.1.0
    , ansi-wl-pprint
    , bytestring
    , cimple            >= 0.0.15
    , containers
    , data-fix
    , deepseq
    , edit-distance
    , filepath
    , groom
    , mtl
    , text

executable check-cimple
  default-language: Haskell2010
  hs-source-dirs:
      tools
  ghc-options:
      -Wall
  main-is: check-cimple.hs
  build-depends:
      base < 5
    , cimple
    , parallel
    , text
    , tokstyle

executable check-c
  default-language: Haskell2010
  hs-source-dirs:
      tools
  ghc-options:
      -Wall
  main-is: check-c.hs
  build-depends:
      base < 5
    , containers
    , language-c
    , monad-parallel

executable webservice
  main-is:             webservice.hs
  ghc-options:
      -Wall
  hs-source-dirs:      web
  default-language:    Haskell2010
  other-modules:
      Tokstyle.App
  build-depends:
      base >= 4 && < 5
    , bytestring
    , cimple
    , servant           >= 0.5
    , servant-server    >= 0.5
    , text
    , tokstyle
    , wai
    , wai-cors
    , wai-extra
    , warp

test-suite testsuite
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: testsuite.hs
  other-modules:
      Tokstyle.LinterSpec
    , Tokstyle.Linter.BooleansSpec
    , Tokstyle.Linter.BooleanReturnSpec
    , Tokstyle.Linter.ConstnessSpec
    , Tokstyle.Linter.TypeCheckSpec
    , Tokstyle.Linter.VarUnusedInScopeSpec
  ghc-options:
      -Wall
      -fno-warn-unused-imports
  build-tool-depends:
      hspec-discover:hspec-discover
  build-depends:
      base < 5
    , cimple
    , hspec
    , text
    , tokstyle
