name:          tokstyle
version:       0.0.9
synopsis:      TokTok C code style checker
description:   TokTok C code style checker
homepage:      https://toktok.github.io/tokstyle
license:       GPL-3
license-file:  LICENSE
author:        iphydf
maintainer:    iphydf@users.noreply.github.com
category:      Development
build-type:    Simple
cabal-version: >=1.10

source-repository head
  type:     git
  location: https://github.com/TokTok/tokstyle

library
  default-language: Haskell2010
  exposed-modules:
    Tokstyle.C.Env
    Tokstyle.C.Linter
    Tokstyle.C.Linter.BoolConversion
    Tokstyle.C.Linter.Cast
    Tokstyle.C.Linter.Conversion
    Tokstyle.C.Linter.Memset
    Tokstyle.C.Linter.Sizeof
    Tokstyle.C.Linter.VoidCall
    Tokstyle.C.Patterns
    Tokstyle.C.TravUtils
    Tokstyle.C.TraverseAst
    Tokstyle.Common
    Tokstyle.Common.EnumLinter
    Tokstyle.Linter
    Tokstyle.Linter.Assert
    Tokstyle.Linter.BooleanReturn
    Tokstyle.Linter.Booleans
    Tokstyle.Linter.CallbackNames
    Tokstyle.Linter.Callgraph
    Tokstyle.Linter.CallocArgs
    Tokstyle.Linter.CallocType
    Tokstyle.Linter.CompoundInit
    Tokstyle.Linter.Constness
    Tokstyle.Linter.DeclaredOnce
    Tokstyle.Linter.DeclsHaveDefns
    Tokstyle.Linter.DocComments
    Tokstyle.Linter.EnumDefines
    Tokstyle.Linter.EnumNames
    Tokstyle.Linter.FuncPrototypes
    Tokstyle.Linter.FuncScopes
    Tokstyle.Linter.GlobalFuncs
    Tokstyle.Linter.LargeStructParams
    Tokstyle.Linter.LoggerCalls
    Tokstyle.Linter.LoggerConst
    Tokstyle.Linter.LoggerNoEscapes
    Tokstyle.Linter.MallocCall
    Tokstyle.Linter.MallocType
    Tokstyle.Linter.MemcpyStructs
    Tokstyle.Linter.MissingNonNull
    Tokstyle.Linter.Nesting
    Tokstyle.Linter.NonNull
    Tokstyle.Linter.Parens
    Tokstyle.Linter.SwitchIf
    Tokstyle.Linter.TypeCheck
    Tokstyle.Linter.TypedefName
    Tokstyle.Linter.UnsafeFunc
    Tokstyle.Linter.VarUnusedInScope
    Tokstyle.SemFmt.EnumFromInt
    Tokstyle.SemFmt.EnumToString
    Tokstyle.SemFmt.EnumUnpack

  ghc-options:      -Wall
  hs-source-dirs:   src
  build-depends:
      aeson           >=0.8.1.0 && <3
    , ansi-wl-pprint  <0.6.9.0
    , array           <0.6
    , base            >=4       && <5
    , bytestring      <0.13
    , cimple          >=0.0.18
    , casing          <0.2
    , containers      <0.8
    , data-fix        <0.4
    , deepseq         <2
    , edit-distance   <0.3
    , extra           <2
    , filepath        <2
    , groom           <0.2
    , language-c      <0.10
    , microlens       <0.5
    , microlens-th    <0.5
    , mtl             <3
    , parallel        <4
    , text            <3

executable check-cimple
  default-language: Haskell2010
  hs-source-dirs:   tools
  ghc-options:      -Wall
  main-is:          check-cimple.hs
  build-depends:
      base      <5
    , cimple
    , parallel  <4
    , text
    , time      <2
    , tokstyle

executable check-c
  default-language: Haskell2010
  hs-source-dirs:   tools
  ghc-options:      -Wall
  main-is:          check-c.hs
  build-depends:
      base            <5
    , language-c
    , monad-parallel  <0.9
    , tokstyle
    , text

executable webservice
  main-is:          webservice.hs
  ghc-options:      -Wall
  hs-source-dirs:   web
  default-language: Haskell2010
  other-modules:    Tokstyle.App
  build-depends:
      base            >=4   && <5
    , bytestring
    , cimple
    , servant         >=0.5
    , servant-server  >=0.5
    , text
    , tokstyle
    , wai             <4
    , wai-cors        <0.3
    , wai-extra       <4
    , warp            <4

test-suite testsuite
  type:               exitcode-stdio-1.0
  default-language:   Haskell2010
  hs-source-dirs:     test
  main-is:            testsuite.hs
  other-modules:
    Tokstyle.C.Linter.MemsetSpec
    Tokstyle.C.Linter.SizeofSpec
    Tokstyle.C.Linter.VoidCallSpec
    Tokstyle.C.LinterSpec
    Tokstyle.Linter.BooleanReturnSpec
    Tokstyle.Linter.BooleansSpec
    Tokstyle.Linter.CallgraphSpec
    Tokstyle.Linter.CallocTypeSpec
    Tokstyle.Linter.CompoundInitSpec
    Tokstyle.Linter.ConstnessSpec
    Tokstyle.Linter.EnumDefinesSpec
    Tokstyle.Linter.ParensSpec
    Tokstyle.Linter.SwitchIfSpec
    Tokstyle.Linter.TypeCheckSpec
    Tokstyle.Linter.VarUnusedInScopeSpec
    Tokstyle.LinterSpec
    Tokstyle.SemFmt.EnumFromIntSpec
    Tokstyle.SemFmt.EnumToStringSpec
    Tokstyle.SemFmt.EnumUnpackSpec

  ghc-options:        -Wall -Wno-unused-imports
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
      base      <5
    , cimple
    , hspec     <3
    , language-c
    , text
    , tokstyle
