load("@ai_formation_hazel//tools:mangling.bzl", "hazel_library")
load("@rules_haskell//haskell:defs.bzl", "haskell_binary")

package(features = ["-layering_check"])

haskell_binary(
    name = "check-cimple",
    srcs = ["check-cimple.hs"],
    compiler_flags = [
        "-rtsopts",
        "-threaded",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//hs-cimple",
        "//hs-tokstyle",
        hazel_library("base"),
        hazel_library("parallel"),
        hazel_library("text"),
        hazel_library("time"),
    ],
)

haskell_binary(
    name = "check-c",
    srcs = ["check-c.hs"],
    args = [
        "+RTS",
        "-N5",
        "-RTS",
    ],
    compiler_flags = [
        "-Wwarn",
        "-rtsopts",
        "-threaded",
    ],
    visibility = ["//visibility:public"],
    deps = [
        hazel_library("base"),
        hazel_library("containers"),
        hazel_library("language-c"),
        hazel_library("monad-parallel"),
    ],
)
