load("@rules_haskell//haskell:defs.bzl", "haskell_binary")

package(features = ["-layering_check"])

haskell_binary(
    name = "check-cimple",
    srcs = ["check-cimple.hs"],
    compiler_flags = [
        "-rtsopts",
        "-threaded",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//hs-cimple",
        "//hs-tokstyle",
        "//third_party/haskell:base",
        "//third_party/haskell:parallel",
        "//third_party/haskell:text",
        "//third_party/haskell:time",
    ],
)

haskell_binary(
    name = "check-c",
    srcs = ["check-c.hs"],
    args = [
        "+RTS",
        "-N5",
        "-RTS",
    ],
    compiler_flags = [
        "-Wwarn",
        "-rtsopts",
        "-threaded",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//third_party/haskell:base",
        "//third_party/haskell:containers",
        "//third_party/haskell:language-c",
        "//third_party/haskell:monad-parallel",
    ],
)
