load("@rules_haskell//haskell:defs.bzl", "haskell_binary")

haskell_binary(
    name = "check-cimple",
    srcs = ["check-cimple.hs"],
    ghcopts = [
        "-rtsopts",
        "-threaded",
    ],
    tags = [
        "haskell",
        "no-cross",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//hs-cimple",
        "//hs-tokstyle",
        "//third_party/haskell:base",
        "//third_party/haskell:parallel",
        "//third_party/haskell:text",
        "//third_party/haskell:time",
    ],
)

haskell_binary(
    name = "check-c",
    srcs = ["check-c.hs"],
    args = [
        "+RTS",
        "-N5",
        "-RTS",
    ],
    ghcopts = [
        "-rtsopts",
        "-threaded",
    ],
    tags = [
        "haskell",
        "no-cross",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//hs-tokstyle:c-linters",
        "//third_party/haskell:base",
        "//third_party/haskell:language-c",
        "//third_party/haskell:monad-parallel",
        "//third_party/haskell:text",
    ],
)
