load("@rules_haskell//haskell:defs.bzl", "haskell_binary")

haskell_binary(
    name = "webservice",
    srcs = glob(["**/*.hs"]),
    tags = ["no-cross"],
    visibility = ["//visibility:public"],
    deps = [
        "//hs-cimple",
        "//hs-tokstyle",
        "//third_party/haskell:base",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:servant",
        "//third_party/haskell:servant-server",
        "//third_party/haskell:text",
        "//third_party/haskell:wai",
        "//third_party/haskell:wai-cors",
        "//third_party/haskell:warp",
    ],
)
